finally fix real issue for constant mobile body overflow

--- a/css/index.css
+++ b/css/index.css
@@ -439,6 +439,7 @@ section.video-section {
         left: 0;
         top: 0;
         z-index: -10;
+        overflow-x: hidden;
     }
         /* SVG line */
         .bg-svg-line {
